--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://jabhuteer.github.io/graggl",
   "private": true,
   "dependencies": {
+    "@danktuary/react-discord-message": "^1.0.2",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
